# polytrader

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/polytrader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/polytrader_agent.egg-info/: PKG-INFO  requires.txt  top_level.txt
backend/src/: main.py  polymarket_client.py  polytrader_agent.py  research_tools.py
backend/src/polytrader/: configuration.py  graph.py  polymarket.py  prompts.py  research_tools.py  state.py  tools.py  utils.py
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/_components/: dashboard-client.tsx  filter-bar.tsx
frontend/app/agent-run-test/: page.tsx
frontend/app/agent-run-test/_components/: agent-run-test-fetcher.tsx
frontend/app/demo/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: agent-console.tsx  agent-step.tsx  analysis-tabs.tsx  dashboard-client.tsx  decision-card.tsx  demo-market-detail-client.tsx  header.tsx  market-card.tsx  market-detail-client.tsx  market-list.tsx  sort-filter-bar.tsx  streaming-agent-console.tsx
frontend/components/markets/: filter-bar.tsx  market-card.tsx
frontend/components/providers/: PrivyProvider.tsx
frontend/components/ui/: use-toast.tsx
frontend/lib/: polymarket-client.ts  polymarket.ts  utils.ts  wagmiConfig.ts
frontend/lib/actions/: get-gamma-markets.ts  getMarkets.ts  stream-agent-analysis.ts
frontend/types/: agent-stream-types.ts  agent-types.ts  market-types.ts
(+13 files in other folders)
